adiciona README.md com informações sobre o projeto e atualiza index.html para melhorar a estrutura semântica

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hotel Paraíso - Conforto e tranquilidade em meio à natureza">
     <title>Hotel Paraíso | Sua melhor experiência em hospedagem</title>
+</head>
 <body>
     <header role="banner">
         <h1>Hotel Paraíso</h1>
         <p><i>Sua melhor experiência em hospedagem</i></p>
-        
         <nav aria-label="Navegação principal">
             <h2 class="sr-only">Menu de navegação</h2>
             <ul>
